# torq-robotics

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  prd-validation-report.md  prd.md  prd.yml  pyproject.toml
.github/workflows/: ci.yml
_bmad-output/implementation-artifacts/: 1-1-package-scaffolding-and-build-configuration.md  1-2-core-types-errors-and-version.md  1-3-configuration-singleton.md  1-4-gravity-well-infrastructure-and-cloud-stub.md  2-1-episode-dataclass-and-imagesequence-loader.md  2-2-storage-layer-save-and-load-episodes.md  2-3-multi-rate-temporal-alignment.md  2-4-mcap-ros-2-ingestion.md  2-5-hdf5-robomimic-ingestion.md  2-6-lerobot-v3-0-ingestion.md  2-7-tq-ingest-entry-point-auto-detection-and-bulk-import.md  3-1-core-quality-scoring-dimensions.md  3-2-qualityreport-and-tq-quality-score-entry-point.md  3-3-quality-gates.md  3-4-quality-distribution-reporting.md  3-5-custom-metric-registry-and-kinematic-feasibility-stub.md  3-6-gravity-well-after-quality-scoring.md  4-1-structured-query-api.md  4-2-dataset-class.md  4-3-sampling-strategies.md  4-4-tq-compose-entry-point-and-dataset-versioning.md  4-5-gravity-wells-for-composition.md  5-1-pytorch-dataloader.md  5-2-wb-mlflow-and-tensorboard-integration.md  5-3-gravity-well-for-large-dataset-streaming.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md
_bmad/_config/: files-manifest.csv  manifest.yaml  workflow-manifest.csv
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
src/torq/: __init__.py  _config.py  _gravity_well.py  cloud.py  episode.py  errors.py  types.py
tests/: conftest.py  test_imports.py
tests/acceptance/: VALIDATION_PROCEDURE.md  conftest.py  run_validation_report.py  test_five_line_workflow.py  (+1 more)
(+104 files in other folders)
